tests/machine/x/ocaml/in_operator_extended.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/in_operator_extended.ml", line 29, characters 32-41:
29 | let m : (string * Obj.t) list = { a = 1 }
                                     ^^^^^^^^^
Error: This expression should not be a record, the expected type is
       (string * Obj.t) list


Context (around line 29):
  27 | List.rev !__res0)
  28 | 
  29 | let m : (string * Obj.t) list = { a = 1 }
  30 | let s : string = "hello"
  31 | 
